[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Change_scene_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI components/Pokemon_info_page.gd" type="Script" id=2]
[ext_resource path="res://assets/themedark_letters_label.tres" type="Theme" id=3]
[ext_resource path="res://assets/button_bag.tres" type="Theme" id=4]
[ext_resource path="res://assets/pokemon_info_slides/info2.tres" type="Texture" id=5]
[ext_resource path="res://assets/pokemon_info_slides/menu1.tres" type="Texture" id=6]
[ext_resource path="res://assets/pokemon_info_slides/info_sprite_holder.tres" type="Texture" id=7]
[ext_resource path="res://assets/pokemon_info_slides/pokemon_types.tres" type="Texture" id=8]

[node name="Pokemon_info_page" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_bar" type="Sprite" parent="."]
position = Vector2( 512.177, 39 )
scale = Vector2( 4.26519, 4.39118 )
texture = ExtResource( 6 )
vframes = 4

[node name="info_laying" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 68.0
margin_right = 1028.0
margin_bottom = 604.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 254.375, 226.36 )
scale = Vector2( 4.23186, 3.70919 )
texture = ExtResource( 7 )
hframes = 2

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 72, 16 )
custom_constants/vseparation = 23
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer2"]
margin_right = 142.0
margin_bottom = 37.0
text = "INFO POKEMON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridContainer2"]
margin_top = 60.0
margin_right = 142.0
margin_bottom = 97.0
text = "Level %s %h"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 726.806
margin_top = 92.5279
margin_right = 870.806
margin_bottom = 428.528
rect_pivot_offset = Vector2( -64, -32 )
custom_constants/vseparation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill" type="Label" parent="GridContainer"]
margin_right = 26.0
margin_bottom = 37.0
text = "%s"

[node name="fill2" type="Label" parent="GridContainer"]
margin_top = 55.0
margin_right = 26.0
margin_bottom = 92.0
text = "%s"

[node name="fill3" type="Label" parent="GridContainer"]
margin_top = 110.0
margin_right = 26.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill4" type="Label" parent="GridContainer"]
margin_top = 165.0
margin_right = 26.0
margin_bottom = 202.0
text = "%s"

[node name="fill5" type="Label" parent="GridContainer"]
margin_top = 220.0
margin_right = 26.0
margin_bottom = 257.0
text = "%s"

[node name="fill6" type="Label" parent="GridContainer"]
margin_top = 275.0
margin_right = 26.0
margin_bottom = 312.0
text = "%s"

[node name="GridContainer5" type="GridContainer" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 231.0
margin_bottom = 488.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer5"]
margin_right = 265.0
margin_bottom = 37.0
text = "Found at %s with level %s"

[node name="Change_scene_button" parent="." instance=ExtResource( 1 )]
margin_left = 944.0
margin_top = 24.0
margin_right = 985.0
margin_bottom = 47.0
theme = ExtResource( 4 )
text = "BACK"
next_scene_path = "res://Scenes/UI components/Pokemon_info_box_.tscn"

[node name="nickname" type="Label" parent="."]
margin_left = 368.0
margin_top = 91.0
margin_right = 464.0
margin_bottom = 128.0
text = "Nickname"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 248, 248 )
scale = Vector2( 3, 3 )

[node name="type" type="Sprite" parent="."]
position = Vector2( 776.222, 218.3 )
scale = Vector2( 3.12327, 3.39566 )
texture = ExtResource( 8 )
vframes = 6
hframes = 3

[node name="type2" type="Sprite" parent="."]
position = Vector2( 901.155, 219.419 )
scale = Vector2( 3.12327, 3.39566 )
texture = ExtResource( 8 )
vframes = 6
hframes = 3
